Metodos de ayuda para los errores

--- a/src/app/reactive/pages/basic-page/basic-page.component.html
+++ b/src/app/reactive/pages/basic-page/basic-page.component.html
@@ -16,15 +16,10 @@
                            formControlName="name"
                            placeholder="Nombre del producto">
 
-                    <span *ngIf="myForm.controls['name'].getError('required') && myForm.controls['name'].touched"
+                    <span *ngIf="isValidField('name')"
                       class="form-text text-danger">
                         <!-- Debe de ser de 3 letras -->
-                        Este campo es requerido
-                    </span>
-                    <span *ngIf="myForm.controls['name'].getError('minlength') && myForm.controls['name'].touched"
-                      class="form-text text-danger">
-                        <!-- Debe de ser de 3 letras -->
-                        Este campo requiere minimo 3 letras
+                        {{getFieldError('name')}}
                     </span>
                 </div>
             </div>
@@ -37,7 +32,7 @@
                            class="form-control"
                            formControlName="price"
                            placeholder="Precio del producto">
-                    <span class="form-text text-danger">
+                    <span *ngIf="isValidField('price')" class="form-text text-danger">
                         El precio debe de ser 0 o mayor
                     </span>
                 </div>
@@ -52,8 +47,8 @@
                            formControlName="inStorage"
                            placeholder="Existencias del producto">
 
-                    <span class="form-text text-danger">
-                         Las existencias deben de ser 0 o mayor
+                    <span *ngIf="isValidField('inStorage')" class="form-text text-danger">
+                      La existencia debe ser 0 o mayor
                     </span>
                 </div>
             </div>
